# furigana_ocr

./: README.md  pyproject.toml  requirements.txt
src/furigana_ocr/: __init__.py  __main__.py  app.py  config.py
src/furigana_ocr/core/: __init__.py  capture.py  dictionary.py  models.py  ocr.py  tokenization.py  transliteration.py
src/furigana_ocr/services/: __init__.py  pipeline.py
src/furigana_ocr/ui/: __init__.py  main_window.py  overlay.py  region_selector.py  system_tray.py
src/furigana_ocr/utils/: __init__.py  geometry.py  timers.py
tests/: test_capture.py  test_dictionary.py  test_pipeline.py  test_tokenization.py
